--- a/web/sites/mobile-casino-gold/config/sync/core.entity_view_display.node.games.default.yml
+++ b/web/sites/mobile-casino-gold/config/sync/core.entity_view_display.node.games.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.games.field_games_target
     - field.field.node.games.field_keywords
     - field.field.node.games.field_preview_mode
+    - field.field.node.games.field_table_id
     - node.type.games
   module:
     - image
@@ -106,6 +107,14 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_table_id:
+    weight: 13
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
 hidden:
   field_keywords: true
