--- a/web/sites/mobile-casino/config/sync/core.entity_form_display.node.games.default.yml
+++ b/web/sites/mobile-casino/config/sync/core.entity_form_display.node.games.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.games.field_games_target
     - field.field.node.games.field_keywords
     - field.field.node.games.field_preview_mode
+    - field.field.node.games.field_table_id
     - image.style.thumbnail
     - node.type.games
   module:
@@ -28,7 +29,7 @@ third_party_settings:
       children:
         - field_game_filter
       parent_name: ''
-      weight: 21
+      weight: 22
       format_type: details
       format_settings:
         id: ''
@@ -43,18 +44,18 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
   field_all_games_category_ribbon:
-    weight: 18
+    weight: 19
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_disable_game_loader:
-    weight: 23
+    weight: 24
     settings:
       display_label: true
     third_party_settings: {  }
@@ -87,19 +88,19 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_game_ribbon:
-    weight: 17
+    weight: 18
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_games_list_category:
-    weight: 15
+    weight: 16
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
     region: content
   field_games_list_thumb_img_small:
-    weight: 16
+    weight: 17
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -107,13 +108,13 @@ content:
     type: image_image
     region: content
   field_games_target:
-    weight: 20
+    weight: 21
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_keywords:
-    weight: 19
+    weight: 20
     settings:
       rows: 2
       placeholder: ''
@@ -121,22 +122,30 @@ content:
     type: string_textarea
     region: content
   field_preview_mode:
-    weight: 22
+    weight: 23
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_table_id:
+    weight: 4
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   langcode:
     type: language_select
-    weight: 4
+    weight: 5
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -144,17 +153,17 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 9
     region: content
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
   scheduler_settings:
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -162,14 +171,14 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 14
+    weight: 15
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 10
     region: content
     third_party_settings: {  }
   title:
@@ -181,13 +190,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
@@ -196,7 +205,7 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
