--- a/web/sites/ptplus/config/sync/user.role.anonymous.yml
+++ b/web/sites/ptplus/config/sync/user.role.anonymous.yml
@@ -23,6 +23,7 @@ permissions:
   - 'access language ko'
   - 'access language lo'
   - 'access language pt-br'
+  - 'access language te'
   - 'access language th'
   - 'access language vi'
   - 'access language zh-hans'
