--- a/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_banner_link.yml
+++ b/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_banner_link.yml
@@ -16,7 +16,7 @@ bundle: webcomposer_slider_v2_entity
 label: 'Pre Banner Link'
 description: 'The link when this banner is clicked'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
