--- a/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_image_landscap.yml
+++ b/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_image_landscap.yml
@@ -5,8 +5,15 @@ dependencies:
   config:
     - field.storage.webcomposer_slider_v2_entity.field_post_banner_image_landscap
   module:
+    - content_translation
     - image
     - webcomposer_slider_v2
+third_party_settings:
+  content_translation:
+    translation_sync:
+      file: file
+      alt: '0'
+      title: '0'
 id: webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_image_landscap
 field_name: field_post_banner_image_landscap
 entity_type: webcomposer_slider_v2_entity
@@ -14,7 +21,7 @@ bundle: webcomposer_slider_v2_entity
 label: 'Post Banner Image Landscape'
 description: 'Recommended dimension of image is 1661px x 376px.'
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
