--- a/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_content_position.yml
+++ b/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_content_position.yml
@@ -16,7 +16,7 @@ bundle: webcomposer_slider_v2_entity
 label: 'Post Content Position'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     value: right
