WEBSITE-5558 add missed config files

--- a/web/sites/entrypage/config/sync/core.entity_view_display.entrypage_front_block.entrypage_front_block.default.yml
+++ b/web/sites/entrypage/config/sync/core.entity_view_display.entrypage_front_block.entrypage_front_block.default.yml
@@ -147,10 +147,12 @@ content:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
+  field_body: true
   field_image_target: true
   field_link: true
   field_link_target: true
   field_link_text_hover_1: true
   field_link_text_hover_2: true
+  field_sub_title: true
   langcode: true
   user_id: true
