--- a/web/sites/entrypage/config/sync/language.content_settings.entrypage_front_block.entrypage_front_block.yml
+++ b/web/sites/entrypage/config/sync/language.content_settings.entrypage_front_block.entrypage_front_block.yml
@@ -8,6 +8,8 @@ dependencies:
 third_party_settings:
   content_translation:
     enabled: true
+    bundle_settings:
+      untranslatable_fields_hide: '0'
 _core:
   default_config_hash: s-jMSOcIk80ux2NMsbWyWemLZtslK7km8Qa3EKa_I8s
 id: entrypage_front_block.entrypage_front_block
