--- a/web/sites/zipang-casino/config/sync/core.entity_form_display.taxonomy_term.all_games_category.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_form_display.taxonomy_term.all_games_category.default.yml
@@ -3,33 +3,101 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.all_games_category.field_category_icon
     - field.field.taxonomy_term.all_games_category.field_icon
+    - field.field.taxonomy_term.all_games_category.field_log_in_state
+    - field.field.taxonomy_term.all_games_category.field_number_of_rows
+    - field.field.taxonomy_term.all_games_category.field_slug
+    - field.field.taxonomy_term.all_games_category.field_thumbnail_size
     - image.style.thumbnail
     - taxonomy.vocabulary.all_games_category
   module:
-    - image
+    - field_group
     - path
+    - svg_image
     - text
+third_party_settings:
+  field_group:
+    group_menu_bar_settings:
+      children:
+        - field_category_icon
+        - field_slug
+      parent_name: ''
+      weight: 5
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: 'Menu Bar Settings'
+    group_main_lobby_presentation:
+      children:
+        - field_thumbnail_size
+        - field_number_of_rows
+      parent_name: ''
+      weight: 6
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: 'Main Game Lobby and Game Category Lobby'
 id: taxonomy_term.all_games_category.default
 targetEntityType: taxonomy_term
 bundle: all_games_category
 mode: default
 content:
   description:
-    type: text_textfield
-    weight: 0
+    type: text_textarea
+    weight: 1
     region: content
     settings:
-      size: 60
       placeholder: ''
+      rows: 5
     third_party_settings: {  }
-  field_icon:
-    weight: 31
+  field_category_icon:
+    weight: 9
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
+    region: content
+  field_icon:
+    weight: 8
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+    type: image_image
+    region: content
+  field_log_in_state:
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
+    region: content
+  field_number_of_rows:
+    weight: 12
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_slug:
+    weight: 10
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_thumbnail_size:
+    weight: 11
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   langcode:
     type: language_select
@@ -40,7 +108,7 @@ content:
     third_party_settings: {  }
   name:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -48,11 +116,13 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 3
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden: {  }
