--- a/web/sites/zipang-casino/config/sync/core.entity_view_display.taxonomy_term.all_games_category.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_view_display.taxonomy_term.all_games_category.default.yml
@@ -3,10 +3,16 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.all_games_category.field_category_icon
     - field.field.taxonomy_term.all_games_category.field_icon
+    - field.field.taxonomy_term.all_games_category.field_log_in_state
+    - field.field.taxonomy_term.all_games_category.field_number_of_rows
+    - field.field.taxonomy_term.all_games_category.field_slug
+    - field.field.taxonomy_term.all_games_category.field_thumbnail_size
     - taxonomy.vocabulary.all_games_category
   module:
-    - image
+    - options
+    - svg_image
     - text
 id: taxonomy_term.all_games_category.default
 targetEntityType: taxonomy_term
@@ -20,6 +26,19 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_category_icon:
+    weight: 2
+    label: above
+    settings:
+      svg_attributes:
+        width: ''
+        height: ''
+      svg_render_as_image: true
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_icon:
     weight: 1
     label: above
@@ -28,6 +47,35 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_log_in_state:
+    weight: 3
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_number_of_rows:
+    weight: 6
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_slug:
+    weight: 4
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_thumbnail_size:
+    weight: 5
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
     region: content
 hidden:
   langcode: true
