--- a/web/sites/zipang-casino/config/sync/views.view.game_list_v4.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.game_list_v4.yml
@@ -824,6 +824,69 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_all_games_category:
+          id: field_all_games_category
+          table: zipang_desktop_games_entity__field_all_games_category
+          field: field_all_games_category
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Main Lobby Categories (All Games Category)'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_label
+          settings:
+            link: true
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         operations:
           id: operations
           table: zipang_desktop_games_entity
@@ -1317,6 +1380,52 @@ display:
           hierarchy: false
           error_message: true
           plugin_id: taxonomy_index_tid
+        field_all_games_category_target_id_1:
+          id: field_all_games_category_target_id_1
+          table: zipang_desktop_games_entity__field_all_games_category
+          field: field_all_games_category_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_all_games_category_target_id_1_op
+            label: 'Main Lobby Categories (All Games Category)'
+            description: ''
+            use_operator: false
+            operator: field_all_games_category_target_id_1_op
+            identifier: field_all_games_category_target_id_1
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: all_games_category
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
       filter_groups:
         operator: AND
         groups:
@@ -1388,6 +1497,7 @@ display:
         - url.query_args
         - user
       tags:
+        - 'config:field.storage.zipang_desktop_games_entity.field_all_games_category'
         - 'config:field.storage.zipang_desktop_games_entity.field_enable_free_play'
         - 'config:field.storage.zipang_desktop_games_entity.field_enable_game'
         - 'config:field.storage.zipang_desktop_games_entity.field_enable_game_mobile'
