--- a/web/sites/mobile-entrypage/config/sync/core.extension.yml
+++ b/web/sites/mobile-entrypage/config/sync/core.extension.yml
@@ -108,6 +108,7 @@ module:
   webcomposer_mailer: 0
   webcomposer_marketing_script: 0
   webcomposer_monolog: 0
+  webcomposer_partner_responsive: 0
   webcomposer_registration_landing_page: 0
   webcomposer_replicate_utility: 0
   webcomposer_rest_extra: 0
@@ -116,6 +117,8 @@ module:
   webcomposer_site_page_not_found: 0
   webcomposer_sitemap: 0
   webcomposer_slider_v2: 0
+  webcomposer_social_media: 0
+  webcomposer_sponsor_responsive: 0
   webcomposer_territory_blocking: 0
   webcomposer_token: 0
   webcomposer_webform: 0
