ATLANTIC-16 Add 'Virtuals' field to webcomposer_slider entity
The 'Virtuals' option has been added to the webcomposer_slider_v2_entity.field_product_slide configuration. This addition further expands the available fields for the mobile-nextbet site, specifically under its 'Product Slide' feature.

--- a/web/sites/mobile-nextbet/config/sync/field.storage.webcomposer_slider_v2_entity.field_product_slide.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.webcomposer_slider_v2_entity.field_product_slide.yml
@@ -23,6 +23,9 @@ settings:
     -
       value: mobile-nextbet-live-dealer
       label: 'Live Dealer'
+    -
+      value: mobile-nextbet-virtuals
+      label: Virtuals
   allowed_values_function: ''
 module: options
 locked: false
