--- a/web/sites/msw/config/sync/views.view.legal_agreement_tiles_entity_api.yml
+++ b/web/sites/msw/config/sync/views.view.legal_agreement_tiles_entity_api.yml
@@ -10,6 +10,8 @@ dependencies:
     - rest
     - serialization
     - webcomposer_rest_extra
+_core:
+  default_config_hash: tQN-CS06Kc1mLsiaqYCANjdR8Qa3xirz6O7QDMuireQ
 id: legal_agreement_tiles_entity_api
 label: 'Legal Agreement Tiles Entity API'
 module: views
@@ -253,7 +255,47 @@ display:
           entity_type: msw_legal_agreement
           entity_field: id
           plugin_id: draggable_views_field
-      filters: {  }
+      filters:
+        langcode:
+          id: langcode
+          table: msw_legal_agreement_field_data
+          field: langcode
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: msw_legal_agreement
+          entity_field: langcode
+          plugin_id: language
       sorts:
         weight:
           id: weight
@@ -313,11 +355,10 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: admin/config/msw_legal_agreement/ordering
+      path: api/legal_agreement
       pager:
-        type: some
+        type: none
         options:
-          items_per_page: 10
           offset: 0
       style:
         type: node_list_serializer
