--- a/web/sites/mobile-entrypage/config/sync/views.view.webcomposer_responsive_partner_entity_api.yml
+++ b/web/sites/mobile-entrypage/config/sync/views.view.webcomposer_responsive_partner_entity_api.yml
@@ -2,6 +2,8 @@ uuid: 8c0599e7-7e90-48b7-9e9d-50c40826dee4
 langcode: en
 status: true
 dependencies:
+  config:
+    - block.block.languagedropdownswitcher_2
   module:
     - draggableviews
     - rest
@@ -350,6 +352,7 @@ display:
         fields: false
         style: false
         row: false
+        header: false
       style:
         type: table
         options:
@@ -392,6 +395,20 @@ display:
           separator: ''
           hide_empty: false
           default_field_elements: true
+      header:
+        entity_block:
+          id: entity_block
+          table: views
+          field: entity_block
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          tokenize: true
+          target: languagedropdownswitcher_2
+          view_mode: default
+          bypass_access: false
+          plugin_id: entity
     cache_metadata:
       max-age: 0
       contexts:
