PACIFIC-1310 add quicklinks menu

--- a/web/sites/zipang-casino/config/sync/system.menu.games-quicklinks.yml
+++ b/web/sites/zipang-casino/config/sync/system.menu.games-quicklinks.yml
@@ -4,5 +4,5 @@ status: true
 dependencies: {  }
 id: games-quicklinks
 label: 'Games Quicklinks'
-description: 'Quicklinks for New Games Page'
+description: 'Quicklinks for New Games Lobby'
 locked: false
