--- a/web/sites/mobile-entrypage/config/sync/core.entity_view_display.paragraph.game_list.default.yml
+++ b/web/sites/mobile-entrypage/config/sync/core.entity_view_display.paragraph.game_list.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.paragraph.game_list.field_target
     - field.field.paragraph.game_list.field_use_game_loader
     - field.field.paragraph.game_list.field_use_lobby
+    - field.field.paragraph.game_list.field_visibility
     - paragraphs.paragraphs_type.game_list
   module:
     - image
@@ -105,6 +106,16 @@ content:
     region: content
   field_use_lobby:
     weight: 4
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_visibility:
+    weight: 14
     label: above
     settings:
       format: default
