ATLANTIC-1052 Added ruby play integration for mobile nextbet

--- a/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider.yml
@@ -35,6 +35,9 @@ settings:
     -
       value: jsystem
       label: JSystem
+    -
+      value: ruby_play
+      label: 'Ruby Play'
   allowed_values_function: ''
 module: options
 locked: false
