--- a/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_arcade.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_arcade.yml
@@ -32,6 +32,9 @@ settings:
     -
       value: jsystem
       label: JSystem
+    -
+      value: ruby_play
+      label: 'Ruby Play'
   allowed_values_function: ''
 module: options
 locked: false
