--- a/web/sites/casino/config/sync/core.entity_view_display.node.game.default.yml
+++ b/web/sites/casino/config/sync/core.entity_view_display.node.game.default.yml
@@ -21,6 +21,7 @@ dependencies:
     - field.field.node.game.field_play_for_fun_toggle
     - field.field.node.game.field_preview_display_only
     - field.field.node.game.field_ribbon_configuration
+    - field.field.node.game.field_table_id
     - node.type.game
   module:
     - image
@@ -159,6 +160,14 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_table_id:
+    weight: 17
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   links:
     weight: 0
