ATLANTIC-1054: extended the game configuration with Ezugi provider.

--- a/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_live_dealer.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_live_dealer.yml
@@ -38,6 +38,9 @@ settings:
     -
       value: jsystem
       label: JSystem
+    -
+      value: ezugi
+      label: 'Ezugi Gaming'
   allowed_values_function: ''
 module: options
 locked: false
