ATLANTIC-1054: fixed Ezugi Gaming provider key name.

--- a/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_live_dealer.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_live_dealer.yml
@@ -39,7 +39,7 @@ settings:
       value: jsystem
       label: JSystem
     -
-      value: ezugi
+      value: ezugi_gaming
       label: 'Ezugi Gaming'
   allowed_values_function: ''
 module: options
