WEBSITE-5823 updated footer form added enable_mobile_footerV3 and enable_desktop_footerV3

--- a/web/sites/registration/config/sync/core.entity_form_display.paragraph.responsive_sponsor.default.yml
+++ b/web/sites/registration/config/sync/core.entity_form_display.paragraph.responsive_sponsor.default.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.responsive_sponsor.field_enable_sponsor
+    - field.field.paragraph.responsive_sponsor.field_mobile_sponsor_subtext
     - field.field.paragraph.responsive_sponsor.field_mobile_sponsor_text
     - field.field.paragraph.responsive_sponsor.field_res_sponsor_image
     - field.field.paragraph.responsive_sponsor.field_res_sponsor_link
@@ -10,17 +12,33 @@ dependencies:
     - field.field.paragraph.responsive_sponsor.field_res_sponsor_mobile_logo
     - field.field.paragraph.responsive_sponsor.field_res_sponsor_tablet_logo
     - field.field.paragraph.responsive_sponsor.field_sponsor_alternative_text
+    - field.field.paragraph.responsive_sponsor.field_weight
     - image.style.thumbnail
     - paragraphs.paragraphs_type.responsive_sponsor
   module:
-    - image
+    - svg_image
 id: paragraph.responsive_sponsor.default
 targetEntityType: paragraph
 bundle: responsive_sponsor
 mode: default
 content:
+  field_enable_sponsor:
+    weight: 0
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_mobile_sponsor_subtext:
+    weight: 10
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_mobile_sponsor_text:
-    weight: 7
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -28,28 +46,6 @@ content:
     type: string_textfield
     region: content
   field_res_sponsor_image:
-    weight: 2
-    settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
-    third_party_settings: {  }
-    type: image_image
-    region: content
-  field_res_sponsor_link:
-    weight: 0
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_res_sponsor_link_target:
-    weight: 1
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
-    region: content
-  field_res_sponsor_mobile_logo:
     weight: 4
     settings:
       progress_indicator: throbber
@@ -57,8 +53,30 @@ content:
     third_party_settings: {  }
     type: image_image
     region: content
-  field_res_sponsor_tablet_logo:
+  field_res_sponsor_link:
+    weight: 2
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_res_sponsor_link_target:
     weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_res_sponsor_mobile_logo:
+    weight: 6
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+    type: image_image
+    region: content
+  field_res_sponsor_tablet_logo:
+    weight: 5
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -66,15 +84,21 @@ content:
     type: image_image
     region: content
   field_sponsor_alternative_text:
-    weight: 5
+    weight: 7
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_weight:
+    weight: 1
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   translation:
-    weight: 6
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
