--- a/web/sites/registration/config/sync/core.entity_view_display.paragraph.responsive_sponsor.default.yml
+++ b/web/sites/registration/config/sync/core.entity_view_display.paragraph.responsive_sponsor.default.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.responsive_sponsor.field_enable_sponsor
+    - field.field.paragraph.responsive_sponsor.field_mobile_sponsor_subtext
     - field.field.paragraph.responsive_sponsor.field_mobile_sponsor_text
     - field.field.paragraph.responsive_sponsor.field_res_sponsor_image
     - field.field.paragraph.responsive_sponsor.field_res_sponsor_link
@@ -10,15 +12,34 @@ dependencies:
     - field.field.paragraph.responsive_sponsor.field_res_sponsor_mobile_logo
     - field.field.paragraph.responsive_sponsor.field_res_sponsor_tablet_logo
     - field.field.paragraph.responsive_sponsor.field_sponsor_alternative_text
+    - field.field.paragraph.responsive_sponsor.field_weight
     - paragraphs.paragraphs_type.responsive_sponsor
   module:
-    - image
     - options
+    - svg_image
 id: paragraph.responsive_sponsor.default
 targetEntityType: paragraph
 bundle: responsive_sponsor
 mode: default
 content:
+  field_enable_sponsor:
+    weight: 9
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_mobile_sponsor_subtext:
+    weight: 7
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_mobile_sponsor_text:
     weight: 5
     label: above
@@ -76,5 +97,12 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_weight:
+    weight: 8
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
     region: content
 hidden: {  }
