--- a/web/sites/mobile-nextbet/modules/custom/mobile_virtuals/mobile_virtuals.info.yml
+++ b/web/sites/mobile-nextbet/modules/custom/mobile_virtuals/mobile_virtuals.info.yml
@@ -1,5 +1,5 @@
-name: Mobile Live Dealer
+name: Mobile Virtuals
 type: module
-description: Live Dealer configuration module
+description: Mobile Virtuals configuration module
 core: 8.x
 package: Web Composer
