--- a/web/sites/mobile-nextbet/modules/custom/mobile_virtuals/mobile_virtuals.links.menu.yml
+++ b/web/sites/mobile-nextbet/modules/custom/mobile_virtuals/mobile_virtuals.links.menu.yml
@@ -1,5 +1,5 @@
-mobile_live_dealer.list:
-  title: 'Live Dealer Mobile Configuration'
-  description: 'Provides configuration for Live Dealer Mobile Site'
+mobile_virtuals.list:
+  title: 'Mobile Virtuals Configuration'
+  description: 'Provides configuration for Mobile Virtuals'
   parent: system.admin_config
-  route_name: mobile_live_dealer.admin_settings
+  route_name: mobile_virtuals.admin_settings
